Fix overflow on quote section

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
-    height: 32%;
+    padding: 100px 200px;
 }
 
 .attribution {
@@ -134,7 +134,7 @@ a {
     font-style: normal;
     font-size: 28px;
     justify-content: flex-end;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 .quote-text {
